--- a/templates/addoffer.html
+++ b/templates/addoffer.html
@@ -14,7 +14,7 @@
 <body>
 
     {% with currentPage='' %}
-        {% include 'navbar.html' %}
+    {% include 'navbar_admin.html' %}
     {% endwith %}
     
     <div id="blg" class="container mb-4">
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
             <label for="contenu">Fonction</label>
-            <textarea class="form-control" id="fonction" name="fonction" rows="6" required></textarea>
+            <textarea class="form-control" id="fonction" name="fonc" rows="6" required></textarea>
         </div>
         <div class="form-group">
             <label for="contenu">Date</label>
