--- a/templates/confirmation_formation.html
+++ b/templates/confirmation_formation.html
@@ -12,7 +12,7 @@
 
 <body>
     {% with currentPage='' %}
-    {% include 'navbar.html' %}
+    {% include 'navbar_admin.html' %}
 {% endwith %}
 <div class="container" style="height: 370px;margin-top: 100px;">
     <div class="row">
