--- a/templates/confirmation_offre.html
+++ b/templates/confirmation_offre.html
@@ -12,7 +12,7 @@
 
 <body>
     {% with currentPage='' %}
-    {% include 'navbar.html' %}
+    {% include 'navbar_admin.html' %}
 {% endwith %}
 <div class="container" style="height: 370px;margin-top: 100px;">
     <div class="row">
@@ -24,7 +24,7 @@
                 <div class="card-body content-center text-center justify-content-center items-center">
                     <p class="content-center text-center">Merci votre offre a été créé avec succès.</p>
                     <br>
-                    <a href="/addformationsadmin" class="btn btn-primary">Retourner a l'accueil admin des offre</a>
+                    <a href="/adminpage" class="btn btn-primary">Retourner a l'accueil admin des offre</a>
                 </div>
             </div>
         </div>
