--- a/templates/details_confs.html
+++ b/templates/details_confs.html
@@ -35,8 +35,8 @@
           </div>
           <div class="desc">
             <h4>Date &amp; Heure</h4>
-            <p style="color: white;">{{ heure }}h:{{ minutes }}min, {{ jour }} {{ mois }}, {{ annee }}</p>
- </div>
+            <p style="color: white;">{{conf.date}}</p>
+          </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 mt-5">
@@ -46,7 +46,7 @@
           </div>
           <div class="desc">
             <h4>Conferenciers</h4>
-            <p style="color: white;">{{ conf.speaker }}</p>
+            <p style="color: white;">{{ conf.conferencier }}</p>
           </div>
         </div>
       </div>
