--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -54,7 +54,7 @@
                 </div>
                 <h4 class="mt-3" style="text-align: center;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 30px;color: rgb(75, 75, 255);">Notre Mission</h4>
                 <br>
-                <p class="text-muted" style="text-align: center;font-family: 'Raleway';">Nous nous efforçons constamment de devenir l'ultime partenaire de confiance pour les entreprises en quête de modernisation, d'innovation et de prospérité au sein de l'économie numérique. Notre vision dépasse les frontières, elle incarne notre détermination à repousser les limites de l'ingénierie, de la digitalisation et de l'industrie 4.0. Notre objectif ultime est de créer un avenir meilleur et plus intelligent pour nos clients et nos partenaires, en forgeant des solutions innovantes et en contribuant à élever les normes de l'excellence technologique, opérationnelle, sociale et environnementale.</p>
+                <p class="text-muted" style="text-align: justify;font-family: 'Raleway';">Nous nous efforçons constamment de devenir l'ultime partenaire de confiance pour les entreprises en quête de modernisation, d'innovation et de prospérité au sein de l'économie numérique. Notre vision dépasse les frontières, elle incarne notre détermination à repousser les limites de l'ingénierie, de la digitalisation et de l'industrie 4.0. Notre objectif ultime est de créer un avenir meilleur et plus intelligent pour nos clients et nos partenaires, en forgeant des solutions innovantes et en contribuant à élever les normes de l'excellence technologique, opérationnelle, sociale et environnementale.</p>
             </div>
 
             <!-- Deuxième Colonne -->
@@ -64,7 +64,7 @@
                 </div>
                 <h4 class="mt-3" style="text-align: center;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 30px;color: rgb(75, 75, 255);">Notre Vision</h4>
                 <br>
-                <p class="text-muted" style="text-align: center;font-family: 'Raleway';">La vision de LMS INVENTION est de devenir un leader mondial dans la transformation numérique de l'industrie 4.0, en maintenant des normes élevées d'excellence technologique, opérationnelle, sociale et environnementale. Notre objectif est de rester à la pointe de l'innovation technologique, en fournissant des solutions de référence en termes de performance, d'efficacité et de durabilité. Nous cherchons également à être un modèle d'excellence opérationnelle, en exécutant nos activités avec précision et en promouvant l'amélioration continue.</p>
+                <p class="text-muted" style="text-align: justify;font-family: 'Raleway';">La vision de LMS INVENTION est de devenir un leader mondial dans la transformation numérique de l'industrie 4.0, en maintenant des normes élevées d'excellence technologique, opérationnelle, sociale et environnementale. Notre objectif est de rester à la pointe de l'innovation technologique, en fournissant des solutions de référence en termes de performance, d'efficacité et de durabilité. Nous cherchons également à être un modèle d'excellence opérationnelle, en exécutant nos activités avec précision et en promouvant l'amélioration continue.</p>
             </div>
 
             <!-- Troisième Colonne -->
@@ -74,7 +74,7 @@
                 </div>
                 <h4 class="mt-3" style="text-align: center;font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-size: 30px;color: rgb(75, 75, 255);">Notre Approche</h4>
                 <br>
-                <p class="text-muted" style="text-align: center;font-family: 'Raleway';">L'approche de LMS INVENTION repose sur une compréhension approfondie des besoins clients, une personnalisation des solutions, une technologie de pointe, une collaboration étroite, une formation complète, une agilité, une responsabilité sociale, et une évaluation continue. Notre objectif est d'ajouter une valeur réelle tout au long du parcours vers l'industrie 4.0 en offrant des solutions sur mesure, intégrant des technologies avancées, assurant la formation et un soutien complet, et en adoptant une approche agile et responsable.</p>
+                <p class="text-muted" style="text-align: justify;font-family: 'Raleway';">L'approche de LMS INVENTION repose sur une compréhension approfondie des besoins clients, une personnalisation des solutions, une technologie de pointe, une collaboration étroite, une formation complète, une agilité, une responsabilité sociale, et une évaluation continue. Notre objectif est d'ajouter une valeur réelle tout au long du parcours vers l'industrie 4.0 en offrant des solutions sur mesure, intégrant des technologies avancées, assurant la formation et un soutien complet, et en adoptant une approche agile et responsable.</p>
             </div>
         </div>
     </div>
