--- a/templates/actualitesadmin.html
+++ b/templates/actualitesadmin.html
@@ -13,7 +13,7 @@
 <body>
 
   {% with currentPage='blog' %}
-  {% include 'navbar.html' %}
+  {% include 'navbar_admin.html' %}
   {% endwith %}
     <a  href="/addblog" class="btn btn mt-3 ml-3" style="background-color: black;border-radius: 50px;color: white;"><i class="fa fa-plus"></i>Ajouter une element</a>
     <div class="mb-4">
@@ -25,38 +25,42 @@
             <hr class="border-b-2 border-blue-500 w-2/3 mt-3">
           </div>
     
-          <div class=" mt-5">
+          <div class="mt-5">
             <div class="grid grid-cols-1 sm:grid-cols-3 gap-5 p-5">
-              <% if (blogs.length > 0) { %>
-                <% blogs.forEach(blog => { %>
-                    <div class="hover:scale-105 transition-transform animate-element" data-animation="fadeInUp"style="background-color: rgb(215, 232, 250);border-radius: 20px;padding: 10px;animation-duration: 0.8s;">
-                        <img src="<%= blog.imagePath %>" alt="<%= blog.titre %>" class="rounded">
-                        <div class="p-3">
-                            <p class="text-xl font-bold text-primary-first mt-2">
-                                <%= blog.titre %>
-                            </p>
-                            <p class="text-primary-first mt-2">
-                              <% const truncatedContent = blog.description.substring(0, 60); %>
-                              <%= truncatedContent %>...
-                            </p>
-                            <div class="mt-5">
-                                <a href="/details_blog/<%= blog.id %>" class="btn btn" style="background-color: rgb(75, 75, 255);color: white;">
-                                    En savoir plus
-                                    <img src="../assets/images/Arrow 1.png" alt="" class="ml-2" style="width: 20px;">
-                                </a>
-                                <a href="/supprimerblog/<%= blog.id %>" class="btn btn" style="background-color: rgb(75, 75, 255);color: white;">
-                                 Supprimer
-                              </a>
+                {% if blogs %}
+                    {% for blog in blogs %}
+                        <div class="hover:scale-105 transition-transform animate-element" data-animation="fadeInUp" style="background-color: rgb(215, 232, 250); border-radius: 20px; padding: 10px; animation-duration: 0.8s;">
+                            <img src="{{ blog.imagePath }}" alt="{{ blog.titre }}" class="rounded">
+                            <div class="p-3">
+                                <p class="text-xl font-bold text-primary-first mt-2">
+                                    {{ blog.titre }}
+                                </p>
+                                <p class="text-primary-first mt-2">
+                                    {% if blog.description %}
+                                        {{ blog.description[:60] }}...
+                                    {% else %}
+                                        Description non disponible.
+                                    {% endif %}
+                                </p>
+                                <div class="mt-5">
+                                    <a href="/details_blog/{{ blog.id }}" class="btn btn" style="background-color: rgb(75, 75, 255); color: white;">
+                                        En savoir plus
+                                        <img src="../assets/images/Arrow 1.png" alt="" class="ml-2" style="width: 20px;">
+                                    </a>
+                                    <a href="/supprimerblog/{{ blog.id }}" class="btn btn" style="background-color: rgb(75, 75, 255); color: white;">
+                                        Supprimer
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                <% }); %>
-            <% } else { %>
-                <p>Aucun blog n'est disponible pour le moment.</p>
-            <% } %>
+                    {% endfor %}
+                {% else %}
+                    <p>Aucun blog n'est disponible pour le moment.</p>
+                {% endif %}
             </div>
-          </div>
+        </div>
+        
         </div>
       </div>
-<%- include('footer.ejs') %>
+      {% include 'footer.html' %}
 </body>
