--- a/templates/addevents.html
+++ b/templates/addevents.html
@@ -14,7 +14,7 @@
 <body>
 
     {% with currentPage='academy' %}
-        {% include 'navbar.html' %}
+    {% include 'navbar_admin.html' %}
     {% endwith %}
     
     <div id="blg" class="container" style="margin-bottom: 50px;">
@@ -29,6 +29,10 @@
               <label for="contenu">Description de l'évènement :</label>
               <textarea class="form-control" id="contenu" name="contenu" rows="6" required></textarea>
           </div>
+          <div class="form-group">
+            <label for="titre">Nom du Conferencier :</label>
+            <input type="text" class="form-control" id="Conferencier" name="Conferencier" >
+        </div>
           <div class="form-group">
             <label for="lien">Lien de l'évènement :</label>
             <input type="text" class="form-control" id="lien" name="lien" required>
