--- a/templates/addformcontent.html
+++ b/templates/addformcontent.html
@@ -14,7 +14,7 @@
 <body>
 
     {% with currentPage='academy' %}
-        {% include 'navbar.html' %}
+    {% include 'navbar_admin.html' %}
     {% endwith %}
     
     <div id="blg" class="container" style="margin-bottom: 50px;">
