--- a/templates/addprojet.html
+++ b/templates/addprojet.html
@@ -14,7 +14,7 @@
 <body>
 
     {% with currentPage='projet' %}
-        {% include 'navbar.html' %}
+    {% include 'navbar_admin.html' %}
     {% endwith %}
     
     <div id="blg" class="container">
