--- a/templates/commentaire.html
+++ b/templates/commentaire.html
@@ -4,7 +4,7 @@
 
 
 <div class="" style="background-color: #e9f2fb;">
-  <form method="POST" action="/enregistrer-commentaire/1" id="form-commentaire" style="background-color: #e9f2fb;">
+  <form method="POST" action="/enregistrer-commentaire/{{idform}}" id="form-commentaire" style="background-color: #e9f2fb;">
     <div class="card-footer py-3 border-0" style="background-color: #e9f2fb;">
       <div class="d-flex flex-start w-100">
         <input type="text" id="username" name="username" style="display: none;">
@@ -14,7 +14,7 @@
           <label class="form-label" for="textAreaExample">Commentaire</label>
         </div>
         <div class="float-end" style="background-color: #e9f2fb;">
-          <button type="submit" class="btn btn-primary p-1 btn-sm" style="width: 60px;height: 60px;border-radius: 50px;"><i class="fa fa-paper-plane"></i></button>
+          <button type="submit" class="btn  p-1 btn-sm" style="width: 60px;height: 60px;border-radius: 50px;"><i class="fa fa-paper-plane"></i></button>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
             <div>
               <h6 class="fw-bold text-primary mb-1">{{ commentaire.auteur }}</h6>
               <p class="text-muted small mb-0">
-                {{ commentaire.contenu }}
+                {{ commentaire.auteur }}
               </p>
             </div>
           </div>
@@ -70,4 +70,4 @@
     });
 </script>
 
-<%- include('footer.html') %>
+{% include 'footer.html' %}
