--- a/templates/conferences.html
+++ b/templates/conferences.html
@@ -34,7 +34,7 @@
                             <img src="{{ conf.imagePath }}" alt="" style="height: 300px;">
                             <div class="events-date">
                                 <div class="font-size28">{{ conf.date.day }}</div> <!-- Jour -->
-                                <div class="font-size14">{{ conf.date|date('F') }}</div> <!-- Mois -->
+                                <div class="font-size14">{{ conf.date.strftime('%B') }}</div> <!-- Mois -->
                                 <div class="font-size14">{{ conf.date.year }}</div> <!-- Année -->
                             </div>
                         </div>
