--- a/templates/contacter.html
+++ b/templates/contacter.html
@@ -30,7 +30,7 @@
     <div class="row no-gutters mb-5">
     <div class="col-md-7" >
     <div class="contact-wrap w-100 p-md-5 p-4" style="background-color: rgb(200, 193, 255);">
-    <h3 class="mb-4">Contact-nous</h3>
+    <h3 class="mb-4">Contactez-nous</h3>
     <div id="form-message-warning" class="mb-4"></div>
     <div id="form-message-success" class="mb-4">
     Message envoye
