--- a/templates/details_blog.html
+++ b/templates/details_blog.html
@@ -17,7 +17,7 @@
 
 <div class="container mt-5 mb-5" id="blog">
     <h1 class="display-4 font-weight-bold mb-3">{{ blog.titre }}</h1>
-    <img src="{{ url_for('static', filename=blog.imagePath) }}" alt="Image de l'article" class="img-fluid rounded" style="height: 80vh; width: 100vw;">
+    <img src="../{{blog.imagePath}}" alt="Image de l'article" class="img-fluid rounded" style="height: 80vh; width: 100vw;">
     <p class="mt-4" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
       {{ blog.description }}
     </p>
