--- a/templates/details_projet.html
+++ b/templates/details_projet.html
@@ -18,7 +18,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-xs-4 item-photo">
-                <img style="max-width:100%;" src="{{ proj.imagePath }}" />
+                <img style="max-width:100%;" src="../{{ proj.imagePath }}" />
             </div>
             <div class="col-xs-5" style="border:0px solid gray">
                 <!-- Datos del vendedor y titulo del producto -->
