--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -76,7 +76,7 @@
                 
                 </ul>
                 <li class="list-unstyled">
-                  <a href="/log" class="ml-2 btn btn mx-2 mt-1" style="background-color: rgb(165, 210, 255); color: rgb(79, 79, 79); text-align: center; width: fit-content; margin-top: -8px; border-radius: 50px; opacity: 1; padding: 10px 20px; font-size: 16px; font-weight: bold; text-decoration: none;">
+                  <a href="/log" class="ml-2 btn btn mx-2 " style="background-color: rgb(165, 210, 255); color: rgb(79, 79, 79); text-align: center; width: fit-content; margin-top: 0px; border-radius: 50px; opacity: 1; padding: 10px 20px; font-size: 16px; font-weight: bold; text-decoration: none;">
                       Espace membres
                   </a>
               </li>
