--- a/templates/pageadmin.html
+++ b/templates/pageadmin.html
@@ -14,16 +14,16 @@
 
     {% with currentPage='' %}
     {% include 'navbar_admin.html' %}
-{% endwith %}
-    <div class="container " style="height: 600px;margin-top: 100px;">
+    {% endwith %}
+    <div class="container " style="height: 800px;margin-top: 30px;">
         <div class="row ">
             <div class="col-md-6 mb-2">
                 <a href="/addblogadmin">
                     <div class="panel">
                         <div class="panel-bg" style="background-image: url('/static/assets/vecteur/blog.jpeg');"></div>
                             <div class="panel-content">
-                        <h3 style="color: white;">Ajouter un blog</h3>
-                        <p>Cliquez pour ajouter un blog</p>
+                        <h3 style="color: white;font-weight: bold;font-size: 50px;">BLOG</h3>
+                        <p>Cliquez pour gerer vos blogs</p>
                     </div>
                     </div>
                 </a>
@@ -33,8 +33,8 @@
                     <div class="panel">
                         <div class="panel-bg" style="background-image: url('/static/assets/vecteur/formation.jpeg');"></div>
                             <div class="panel-content">
-                        <h3 style="color: white;">Ajouter une formation</h3>
-                        <p>Cliquez pour ajouter une formation</p>
+                        <h3 style="color: white;font-weight: bold;font-size: 50px;">Formation</h3>
+                        <p>Cliquez pour gerer vos formations</p>
                     </div>
                     </div>
                 </a>
@@ -46,8 +46,8 @@
                     <div class="panel">
                         <div class="panel-bg" style="background-image: url('/static/assets/vecteur/event.jpeg');"></div>
                             <div class="panel-content">
-                        <h3 style="color: white;">Ajouter un événement</h3>
-                        <p>Cliquez pour ajouter un événement</p>
+                        <h3 style="color: white;font-weight: bold;font-size: 50px;">Evénement</h3>
+                        <p>Cliquez pour gerer vos événements</p>
                     </div>
                     </div>
                 </a>
@@ -57,8 +57,8 @@
                     <div class="panel">
                         <div class="panel-bg" style="background-image: url('/static/assets/vecteur/offre.jpeg');"></div>
                         <div class="panel-content">
-                        <h3 style="color: white;">Ajouter une offre d'emploi</h3>
-                        <p>Cliquez pour ajouter un emploi</p>
+                        <h3 style="color: white;font-weight: bold;font-size: 50px;">Emploi</h3>
+                        <p>Cliquez pour gerer vos emplois</p>
                     </div>
                     </div>
                 </a>
@@ -70,8 +70,8 @@
                     <div class="panel">
                         <div class="panel-bg" style="background-image: url('/static/assets/vecteur/projet.jpeg');"></div>
                             <div class="panel-content">
-                                <h3 style="color: white;">Ajouter un projet</h3>
-                                <p>Cliquez pour ajouter un projet</p>
+                                <h3 style="color: white;font-weight: bold;font-size: 50px;">Projet</h3>
+                                <p>Cliquez pour gerer vos projets</p>
                             </div>
                         </div>
                 </a>
@@ -81,8 +81,8 @@
                     <div class="panel">
                         <div class="panel-bg" style="background-image: url('/static/assets/vecteur/intern.jpeg');"></div>
                         <div class="panel-content">
-                            <h3 style="color: white;">Ajouter une offre de stage</h3>
-                            <p>Cliquez pour ajouter un stage</p>
+                            <h3 style="color: white;font-weight: bold;font-size: 50px;">Stage</h3>
+                            <p>Cliquez pour gerer vos offres stages</p>
                         </div>
                     </div>
                     
