--- a/templates/team.html
+++ b/templates/team.html
@@ -87,17 +87,17 @@
             <div class="mb-3 text-center" >
                 Notre équipe est composée d'experts chevronnés dans les domaines de l'ingénierie, de la technologie et de la gestion de projet. Chacun de nos membres apporte une expertise unique qui nous permet de développer des solutions personnalisées et innovantes pour nos clients. Nous sommes fiers de notre dévouement à la qualité, à la créativité et à l'excellence.
             </div>
-            <div class="row text-center mt-5">
+            <div class="row text-center mt-5 justify-content-center">
         
                 <!-- Team item -->
-                <div class="col-md-4 animate-element" data-animation="fadeInUp" style="height: 400px;">
+                <!-- <div class="col-md-4 animate-element" data-animation="fadeInUp" style="height: 400px;">
                     <div class="bg-white rounded shadow-sm "><img src="/static/assets/profil/zinedine.png" alt="" width="100" class="img-fluid rounded-circle img-thumbnail shadow-sm" style="margin-bottom: 10px;scale: 1.4;">
                         <h5 class="mb-0">ADIKPETO Rivaldo</h5><span class="small text-uppercase text-muted">Service IT</span><br><a href="mailto:adikpetojun@gmail.com" class="small" style="color: blue;">adikpetojun@gmail.com</a>
                         <ul class="social mb-0 list-inline mt-3">
                             <li class="list-inline-item"><a href="https://www.linkedin.com/in/adikpeto-rivaldo-5b8477239" class="social-link"><i class="fab fa-linkedin" style="color: blue;"></i></a></li>
                         </ul>
                     </div>
-                </div><!-- End -->
+                </div>End -->
         
                 <!-- Team item -->
                 <div class="col-md-4 animate-element" data-animation="fadeInUp" style="height: 400px;">
