--- a/templates/contacter.html
+++ b/templates/contacter.html
@@ -6,7 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@8.6.7/dist/ol.css">
+    <script src="https://cdn.jsdelivr.net/npm/ol@8.6.7/dist/ol.js"></script>
+    <link rel="stylesheet" href="https://openlayers.org/en/v6.13.0/css/ol.css" type="text/css">
+  <!-- Inclure la bibliothèque OpenLayers -->
+  <script src="https://openlayers.org/en/v6.13.0/build/ol.js" type="text/javascript"></script>
     <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -72,7 +79,7 @@
     </div>
     </div>
     <div class="col-md-5 d-flex align-items-stretch">
-    <div id="map" style="height: 100%;"></div>
+    <div id="map" style="height: 100%;width: 100%;"></div>
     </div>
     </div>
     <div class="row" style="scale: 0.7;">
@@ -124,16 +131,52 @@
 
 {% include 'footer.html' %}
 <script>
- // Créer une instance de carte Leaflet
-var mymap = L.map('map').setView([51.3, -0.49], 15);
+  ol.proj.useGeographic();
+// Coordonnées de Meknès et de l'ENSAM
+var meknesLatLng = [-5.54667, 33.88333]; // [longitude, latitude]
+var ensamLatLng = [-5.551733, 33.897594];
+    // Créer une carte centrée sur Meknès
+    var map = new ol.Map({
+      target: 'map',
+      layers: [
+        new ol.layer.Tile({
+          // Source de tuiles OSM
+          source: new ol.source.OSM()
+        })
+      ],
+      view: new ol.View({
+        center: meknesLatLng,
+        zoom: 14 // Zoom initial ajusté
+      })
+    });
 
-// Ajouter une couche de tuiles (par exemple, OpenStreetMap)
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-}).addTo(mymap);
+    // Ajouter un marqueur sur l'ENSAM
+    var ensamMarker = new ol.Feature({
+      geometry: new ol.geom.Point(ensamLatLng)
+    });
 
-// Vous pouvez également ajouter des marqueurs, des cercles, des polygones, etc. à votre carte ici
+    var style = new ol.style.Style({
+  image: new ol.style.Icon({
+    // Ancrage de l'icône (par défaut en haut à gauche)
+    anchor: [0.5, 1],
+    // URL de l'icône de marqueur
+    src: 'https://openlayers.org/en/latest/examples/data/icon.png',
+    // Taille de l'icône
+    scale: 0.9
+  })
+});
 
+
+    // Ajouter le style et le marqueur à une couche vectorielle
+    var vectorLayer = new ol.layer.Vector({
+      source: new ol.source.Vector({
+        features: [ensamMarker]
+      }),
+      style: style
+    });
+
+    // Ajouter la couche vectorielle à la carte
+    map.addLayer(vectorLayer);
   </script>
   
 <style>
