--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>LMS</title>
+  <title>LMS INVENTION</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@8.6.7/dist/ol.css">
   <script src="https://cdn.jsdelivr.net/npm/ol@8.6.7/dist/ol.js"></script>
