--- a/templates/footer.html
+++ b/templates/footer.html
@@ -27,9 +27,12 @@
     <div class="col-md-4 mb-4 mb-md-0 animate-element" data-animation="fadeInUp" style="animation-duration: 0.6s;">
     <h3 style="color: white;">Newsletter</h3>
     <p class="mb-4">Abonnez-vous pour ne rater aucun de nos actualités.</p>
-    <form action="/newsletter" method="post" class="subscribe">
-    <input type="text" class="form-control" name="email" placeholder="Entrez votre e-mail">
-    <input type="submit" class="btn btn-submit" style="background-color: blue;" value="Envoyer">
+    <form action="/newsletter" method="post" class="">
+    <input style="border-radius: 50px;" type="text" class="form-control" name="name" placeholder="Entrez votre nom et prenom" required>
+    <br>
+    <input style="border-radius: 50px;"  type="email" class="form-control" name="email" placeholder="Entrez votre e-mail" required>
+    <br>
+    <input  type="submit" class="btn btn-submit" style="background-color: blue;border-radius: 50px;color: white;" value="Envoyer">
     </form>
     </div>
     </div>
