--- a/templates/regist.html
+++ b/templates/regist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>LMS INVENTION</title>
     <!-- Ajouter les liens vers les fichiers Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-n5382Fo5mawJ/lgnbABJw5p2b8N8y+d5Wvxe3r5D2+z5MTvEW+toPzF5fBTK6Dn1t9wD" crossorigin="anonymous">
 </head>
