--- a/templates/actualites.html
+++ b/templates/actualites.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LMS</title>
+  <title>LMS INVENTION</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -44,9 +44,6 @@
                   <a href="{{ url_for('details_blog', id=blog.id) }}" class="btn btn" style="background-color: rgb(75, 75, 255);color: white;">
                     En savoir plus
                     <img src="{{ url_for('static', filename='../static/assets/images/Arrow 1.png') }}" alt="" class="ml-2" style="width: 20px;">
-                  </a>
-                  <a href="{{ url_for('supprimer_blog', id=blog.id) }}" class="btn btn" style="background-color: rgb(75, 75, 255);color: white;padding: 13px;">
-                    Supprimer
                   </a>
                 </div>
               </div>
