--- a/templates/confirmation_blog.html
+++ b/templates/confirmation_blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LMS</title>
+    <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
  {% with currentPage='' %}
  {% include 'navbar_admin.html' %}
 {% endwith %}
-<div class="container" style="height: 370px;margin-top: 100px;">
+<div class="container" style="height: fit-content;margin-bottom: 100px;margin-top: 100px;">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card ">
