--- a/templates/details_blog.html
+++ b/templates/details_blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LMS</title>
+    <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,8 +21,36 @@
     <p class="mt-4" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
       {{ blog.description }}
     </p>
-  </div>
-  
+</div>
+  <br>
+  <br>
+
+<div class="container" style="justify-content: center;display: flex;align-items: center;">
+    <div style="padding: 20px;">
+<a href="/comment_blog/{{ blog.id }}" style="color: rgb(0, 0, 0);font-size: 20px;background-color: #1da1f2;border-radius: 30px;">
+    Commenter
+</button>
+</div>
+
+
+
+    <div class="share-buttons">
+        <!-- Facebook -->
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{ url_for('details_blog', id=blog.id) }}" target="_blank" style="display: inline-block; margin-right: 10px; background-color: #3b5998; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <!-- Twitter -->
+        <a href="https://twitter.com/intent/tweet?url={{ url_for('details_blog', id=blog.id) }}" target="_blank" style="display: inline-block; margin-right: 10px; background-color: #1da1f2; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <!-- LinkedIn -->
+        <a href="https://www.linkedin.com/shareArticle?url={{ url_for('details_blog', id=blog.id) }}" target="_blank" style="display: inline-block; background-color: #0077b5; color: #fff; font-size: 24px; text-decoration: none; transition: color 0.3s ease;padding: 5px;border-radius: 50%;height: 40px;width: 40px;display: flex;justify-content: center;">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+    </div>
+</div>
+
+
     <style>
         p br {
             margin: 10px 0; /* Ajustez la marge selon vos préférences */
@@ -59,17 +87,20 @@ font-weight:600;
 }
     </style>
 </div>
-<section class="newsletter" style="height: 300px;">
+<section class="newsletter" style="height: fit-content;margin-bottom: 100px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="content">
                     <form action="/newsletter" method="post">
                         <h2>Abonnez-vous a notre newsletter</h2>
-                        <div class="input-group">
-                            <input type="email" name="email" class="form-control" placeholder="Enter your email">
+                        <div class="">
+                            <input style="border-radius: 50px;" type="text" class="form-control" name="name" placeholder="Entrez votre nom et prenom" required>
+                            <br>
+                            <input style="border-radius: 50px;"  type="email" class="form-control" name="email" placeholder="Entrez votre e-mail" required>
+                            <br>
                             <span class="input-group-btn">
-                                <button class="btn" type="submit">S'abonner maintenant</button>
+                                <button style="border-radius: 50px;" class="btn" type="submit">S'abonner maintenant</button>
                             </span>
                         </div>
                     </form>
