--- a/templates/details_candidats.html
+++ b/templates/details_candidats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Détails du Postulant</title>
+    <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         /* Ajoutez votre propre CSS personnalisé ici */
