--- a/templates/details_confs.html
+++ b/templates/details_confs.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LMS</title>
+  <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -76,29 +76,27 @@
 </div>
 </section>
 
-<div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="height: fit-content">
+<div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="height: fit-content;margin-top: -2vh;">
   <div class="modal-dialog  modal-dialog-centered justify-content-center " role="document">
       <div class="modal-content  border-0">   
           <div class="modal-body  p-0">
               <div class="card text-center">
                   <div class="card-header pb-0 bg-white border-0">
-                    <div class="row">
-                      <div class="col ml-auto">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span> 
-                        </button>
-                      </div> 
+                    <div class="row"><div class="col ml-auto">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span></button>
+                      </div>
                     </div>
-                    <img style="scale: 0.5;height: 100px;width: 100px;" src="../static/assets/images/lms-logo-removebg-preview.png" class="img-fluid" />
-                    <h4 style="font-weight: bold;">Pofitez pleinement de nos conferences</h4>
+                    <img style="height: 6vh;width: 6vw;" src="../static/assets/images/lms-logo-removebg-preview.png" class="img-fluid" />
+                    <h6 style="font-weight: bold;">Pofitez pleinement de nos conferences</h6>
                   </div>
                   <hr style="color: #0062ff;border: 1px blue solid;">
                   <div class="card-body ">
-                      <p class="text-muted mb-0" style="font-size: 15px;">Pour recevoir le lien de la conference, veuillez entrer vos informations</p>    
+                      <p class="text-muted mb-0" style="font-size: 12px;">Pour avoir une meilleure esperience d'apprentissage vueillez entrer vos informations</p>    
                       <div class="row justify-content-center mt-4 px-sm-5  ">
                         <form id="userInfoForm" action="/souscription_conf/{{ conf.id }}" method="post">
                           <div class="form-group">
-                            <label for="userName">Nom & Prenom:</label>
+                            <label for="userName">Nom :</label>
                             <input type="text" class="form-control" id="userName" name="userName">
                           </div>
                           <div class="form-group">
@@ -106,16 +104,16 @@
                             <input type="email" class="form-control" id="userEmail" name="userEmail">
                           </div>
                           <div class="row align-items-center">
-                            <div class="col-1" style="margin-top: -13px;">
-                                <input type="checkbox" name="notif" id="notif">
-                            </div>
-                            <div class="col-11">
-                                <p style="font-size: 13px;color: rgb(76, 76, 255);">Acceptez-vous de recevoir des notifications régulières ?</p>
-                            </div>
+                            <div class="col-auto">
+                              <input type="checkbox" name="notif" id="notif">
+                          </div>
+                          <div class="col">
+                              <p style="font-size: 13px; color: rgb(76, 76, 255); margin-bottom: 0;">Acceptez-vous de recevoir des notifications régulières ?</p>
+                          </div>
                         </div>
+                        
                           <div class="modal-footer">
-                            
-                            <button type="submit" class="btn btn-primary" id="saveUserInfo">Soumettre</button>
+                            <button type="submit" class="btn btn" style="background-color: rgb(66, 66, 254);color: white;">Soumettre</button>
                           </div>
                         </form>
                       </div>
