--- a/templates/details_confs_admin.html
+++ b/templates/details_confs_admin.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LMS</title>
+  <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
   </div>
 </section>
 
-<div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="height: fit-content">
+<div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="height: fit-content;">
   <div class="modal-dialog  modal-dialog-centered justify-content-center " role="document">
       <div class="modal-content  border-0">   
           <div class="modal-body  p-0">
