--- a/templates/emplois.html
+++ b/templates/emplois.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>LMS</title>
+  <title>LMS INVENTION</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <div class="container mt-5 mb-3">
     <div class="w-2/4 mb-3">
       <div class="text-center mt-8">
-        <h2 class="font-extrabold relative mb-4" style="font-size: 28px; color: blue;">Offres</h2>
+        <h2 class="font-extrabold relative mb-4" style="font-size: 28px; color: blue;">Offres {{type}}</h2>
         <div class="w-16 h-1 bg-blue-900 mx-auto" style="background-color: blue;"></div>
       </div>
     </div>
