--- a/templates/formations.html
+++ b/templates/formations.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LMS</title>
+  <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
           {% if formations %}
               {% for formation in formations %}
                     <!-- Modal -->
-                    <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="height: fit-content;">
+                    <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="height: fit-content;margin-top: -2vh;">
                       <div class="modal-dialog  modal-dialog-centered justify-content-center " role="document">
                           <div class="modal-content  border-0">   
                               <div class="modal-body  p-0">
@@ -39,12 +39,12 @@
                                             <span aria-hidden="true">&times;</span></button>
                                           </div>
                                         </div>
-                                        <img style="scale: 0.5;" src="../static/assets/images/lms-logo-removebg-preview.png" class="img-fluid" />
-                                        <h4 style="font-weight: bold;">Pofitez pleinement de nos formations</h4>
+                                        <img style="height: 6vh;width: 6vw;" src="../static/assets/images/lms-logo-removebg-preview.png" class="img-fluid" />
+                                        <h6 style="font-weight: bold;">Pofitez pleinement de nos formations</h6>
                                       </div>
                                       <hr style="color: #0062ff;border: 1px blue solid;">
                                       <div class="card-body ">
-                                          <p class="text-muted mb-0" style="font-size: 15px;">Pour avoir une meilleure esperience d'apprentissage vueillez entrer vos informations</p>    
+                                          <p class="text-muted mb-0" style="font-size: 12px;">Pour avoir une meilleure esperience d'apprentissage vueillez entrer vos informations</p>    
                                           <div class="row justify-content-center mt-4 px-sm-5  ">
                                             <form id="userInfoForm" action="/souscription_form/{{ formation.id }}" method="post">
                                               <div class="form-group">
@@ -56,12 +56,12 @@
                                                 <input type="email" class="form-control" id="userEmail" name="userEmail">
                                               </div>
                                               <div class="row align-items-center">
-                                                <div class="col-1">
-                                                    <input type="checkbox" name="notif" id="notif">
-                                                </div>
-                                                <div class="col-11">
-                                                    <p style="font-size: 13px;color: rgb(76, 76, 255);">Acceptez-vous de recevoir des notifications régulières ?</p>
-                                                </div>
+                                                <div class="col-auto">
+                                                  <input type="checkbox" name="notif" id="notif">
+                                              </div>
+                                              <div class="col">
+                                                  <p style="font-size: 13px; color: rgb(76, 76, 255); margin-bottom: 0;">Acceptez-vous de recevoir des notifications régulières ?</p>
+                                              </div>
                                             </div>
                                             
                                               <div class="modal-footer">
