--- a/templates/newsletter_msg.html
+++ b/templates/newsletter_msg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LMS</title>
+    <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     {% with currentPage='' %}
         {% include 'navbar.html' %}
     {% endwith %}
-    <div class="container" style="height: 570px; margin-top: 50px; margin-bottom: 100px;">
+    <div class="container" style="height: fit-content;margin-bottom: 100px;margin-top: 50px; margin-bottom: 100px;">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card">
