--- a/templates/pas_element.html
+++ b/templates/pas_element.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LMS</title>
+    <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
         <div class="col-md-6 offset-md-3">
             <div class="card ">
                 <div class="card-header text-center" style="font-size: 30px;color: blue;">
-                    C'etatit le dernier element
+                    C'etait le dernier element
                 </div>
                 <div class="card-body content-center text-center justify-content-center items-center">
                     <p class="content-center text-center">Merci de votre comprehension.</p>
