--- a/templates/quisommesnous.html
+++ b/templates/quisommesnous.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>LMS</title>
+    <title>LMS INVENTION</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 Contactez-nous dès aujourd'hui pour découvrir comment nous pouvons vous aider à réaliser vos objectifs dans l'ère de l'industrie 4.0.</p>
                   </div>
                   <div class="col-lg-6">
-                    <img src="../static/assets/images/group 10.png" alt="Image À Propos" class="img ">
+                    <img class="img" style="z-index: 9999999;"  src="../static/assets/images/Group 10.png" alt="User 1">
                 </div>
             </div>
         </div>
