--- a/templates/confirmation_supp.html
+++ b/templates/confirmation_supp.html
@@ -27,7 +27,7 @@
                 <div class="card-body content-center text-center justify-content-center items-center">
                     <p class="content-center text-center">{{ message }}</p>
                     <br>
-                    <a href="/" class="btn btn" style="border-radius: 50px;background-color: blue;color: white;">Retourner a l'accueil</a>
+                    <a href="/adminpage" class="btn btn" style="border-radius: 50px;background-color: blue;color: white;">Retourner a l'accueil</a>
                 </div>
             </div>
         </div>
