--- a/templates/emploi.html
+++ b/templates/emploi.html
@@ -90,7 +90,7 @@
                                               </div>
                                               <div class="lpa-meta">
                                                   <a class="name" href="#">{{ offer.fonc }}</a>
-                                                  <a class="date" href="#">{{ offer.date }}</a>
+                                                  <a class="date" href="#">{{ offer.date.strftime('%B') }}</a>
                                               </div>
                                           </div>
                                           <div class="lpa-right">
