--- a/templates/formationsadmin.html
+++ b/templates/formationsadmin.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  
   {% with currentPage='academy' %}
   {% include 'navbar_admin.html' %}
 {% endwith %}
@@ -30,12 +29,13 @@
         {% if formations %}
             {% for formation in formations %}
                 <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-                    <div class="card service-wrapper border-5 shadow p-6" style="height: 300px; border-radius: 50px;">
+                    <div class="card service-wrapper border-5 shadow p-6" style="height: fit-content; border-radius: 50px;">
                         <div class="icon text-center text-custom h1 shadow rounded bg-white">
                             <span class="uim-svg" style=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><rect width="20" height="15" x="2" y="3" class="uim-tertiary" rx="3"></rect><path class="uim-primary" d="M16,21H8a.99992.99992,0,0,1-.832-1.55469l4-6a1.03785,1.03785,0,0,1,1.66406,0l4,6A.99992.99992,0,0,1,16,21Z"></path></svg></span>
                         </div>
-                        <div class="content mt-4">
-                            <h5 class="title" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 30px; color: #0062ff;">{{ formation.titre }}</h5>
+                        <div class="">
+                            <h5 class="title" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 30px; color: #0062ff;">{{ formation.titre|safe }}</h5>
+                            <br>
                             <p class="text-muted mt-3 mb-0" style="font-family: 'Kanit';">
                                 {{ formation.description[:50]|safe }}...
                             </p>
@@ -53,10 +53,11 @@
             <p>Aucune formation n'est disponible pour le moment.</p>
         {% endif %}
     </div><!--end row-->
+   
+</div>
+
 </div>
 {% include 'footer.html' %}
-
-
 <style>
     body{margin-top:20px;
 background:#eee;
