--- a/templates/formation.html
+++ b/templates/formation.html
@@ -21,7 +21,7 @@
     <div class="row justify-content-center">
         <div class="col-12">
             <div class="section-title text-center mb-4 pb-2">
-                <h4 class="title mb-4 mt-4" style="font-family: 'Raleway'; font-weight: bold; font-size: 40px;">{{form.titre}}</h4>
+                <h4 class="title mb-4 mt-4" style="font-family: 'Raleway'; font-weight: bold; font-size: 40px;">{{form.titre |safe}}</h4>
                 <p class="text-muted para-desc mx-auto mb-0">Ici vous trouvez les chapitre de "{{form.titre}}"</p>
             </div>
         </div><!--end col-->
