--- a/templates/formations.html
+++ b/templates/formations.html
@@ -44,7 +44,7 @@
                                       </div>
                                       <hr style="color: #0062ff;border: 1px blue solid;">
                                       <div class="card-body ">
-                                          <p class="text-muted mb-0" style="font-size: 12px;">Pour avoir une meilleure esperience d'apprentissage vueillez entrer vos informations</p>    
+                                          <p class="text-muted mb-0" style="font-size: 12px;">Pour avoir une meilleure esperience d'apprentissage veuillez entrer vos informations</p>    
                                           <div class="row justify-content-center mt-4 px-sm-5  ">
                                             <form id="userInfoForm" action="/souscription_form/{{ formation.id }}" method="post">
                                               <div class="form-group">
@@ -76,12 +76,12 @@
                       </div>
                   </div>
           <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
-              <div class="card service-wrapper border-5 shadow p-6" style="height: 300px;border-radius: 50px;">
+              <div class="card service-wrapper border-5 shadow p-6" style="height: fit-content;border-radius: 50px;">
                   <div class="icon text-center text-custom h1 shadow rounded bg-white">
                       <span class="uim-svg" style=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><rect width="20" height="15" x="2" y="3" class="uim-tertiary" rx="3"></rect><path class="uim-primary" d="M16,21H8a.99992.99992,0,0,1-.832-1.55469l4-6a1.03785,1.03785,0,0,1,1.66406,0l4,6A.99992.99992,0,0,1,16,21Z"></path></svg></span>
                   </div>
-                  <div class="content mt-4">
-                      <h5 class="title" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 30px; color: #0062ff;">{{ formation.titre }}</h5>
+                  <div class="">
+                      <h5 class="title" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 30px; color: #0062ff;">{{ formation.titre|safe }}</h5>
                       <p class="text-muted mt-3 mb-0" style="font-family: 'Kanit';">
                           {% set truncatedContent = formation.description[:60] %}
                           {{ truncatedContent }}...
