--- a/templates/pas_element.html
+++ b/templates/pas_element.html
@@ -24,7 +24,7 @@
                 <div class="card-body content-center text-center justify-content-center items-center">
                     <p class="content-center text-center">Merci de votre comprehension.</p>
                     <br>
-                    <a href="/formations" class="btn btn-primary">Retourner a l'accueil des formations</a>
+                    <a href="/formation/{{idf}}" class="btn btn-primary">Retourner a l'accueil des formations</a>
                 </div>
             </div>
         </div>
